objects/Prices_History__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Time__c</fullName>
        <label>Last Updated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Prices History</relationshipLabel>
        <relationshipName>Prices_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_List_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price List Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_List_Line_Id__c</fullName>
        <externalId>true</externalId>
        <label>Price List Line Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Name__c</fullName>
        <label>Price Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Prices History</relationshipLabel>
        <relationshipName>Prices_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Prices History</label>
    <nameField>
        <label>Prices History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prices History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>